--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+django-andsome (1.3-1) stable; urgency=low
+
+  * Take over the package from previous maintainer.
+  * Remove reference to obsolete arcs website.
+  * Update image references to use staticfile images from Django package.
+
+ -- Brian May <bam@debian.org>  Wed, 07 Nov 2012 13:48:28 +1100
+
 django-andsome (1.2-1) stable; urgency=low
 
   * Support new Django static urls
