--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+django-andsome (1.3.1-1) stable; urgency=low
+
+  * Use class colSM so sub-titles are consistent.
+
+ -- Brian May <bam@debian.org>  Mon, 19 Nov 2012 14:06:00 +1100
+
 django-andsome (1.3-1) stable; urgency=low
 
   * Take over the package from previous maintainer.
