--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+django-andsome (1.3.2-1) unstable; urgency=low
+
+  * Fix URL syntax for Django 1.5
+
+ -- Brian May <bam@debian.org>  Tue, 28 May 2013 15:38:54 +1000
+
 django-andsome (1.3.1-1) stable; urgency=low
 
   * Use class colSM so sub-titles are consistent.
