--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ django-andsome (1.3.2-1) unstable; urgency=low
 
   * Fix URL syntax for Django 1.5
   * Use python2 build method.
+  * Update debian-standards version to 3.9.3.
 
  -- Brian May <bam@debian.org>  Tue, 28 May 2013 15:38:54 +1000
 
